src/css/base.css
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/roboto-v15-latin-regular.eot');
  src: local('Roboto'), local('Roboto-Regular'),
    url('../fonts/roboto-v15-latin-regular.eot?#iefix') format('embedded-opentype'),
    url('../fonts/roboto-v15-latin-regular.woff2') format('woff2'),
    url('../fonts/roboto-v15-latin-regular.woff') format('woff'),
    url('../fonts/roboto-v15-latin-regular.ttf') format('truetype'),
    url('../fonts/roboto-v15-latin-regular.svg#Roboto') format('svg');
}

:root {
  --font-family: 'Roboto', 'Noto', sans-serif;
  --pop-rgb: 166, 136, 250;
  --main-color: rgb(var(--main-rgb));
  --pop-color: rgb(var(--pop-rgb));
  --text-color: #333333;
  --main-rgb: 255, 255, 255;
  --disabled-color: #c1bebe;
  --background-color: rgb(213, 213, 213);
  --selected-color: rgba(100, 100, 100, 0.4);
  --seperator-line: 1px solid rgba(51, 51, 51, 0.2);
  --contrast-color: #333333;
  --animate-150: 150ms;
  --animate-200: 200ms;
  --animate-300: 300ms;
  --animate-500: 500ms;
  --animation-duration: 800ms;
  --animation-timing: linear(0 0%, 0 1.8%, 0.01 3.6%, 0.03 6.35%, 0.07 9.1%, 0.13 11.4%, 0.19 13.4%, 0.27 15%, 0.34 16.1%, 0.54 18.35%, 0.66 20.6%, 0.72 22.4%, 0.77 24.6%, 0.81 27.3%, 0.85 30.4%, 0.88 35.1%, 0.92 40.6%, 0.94 47.2%, 0.96 55%, 0.98 64%, 0.99 74.4%, 1 86.4%, 1 100%);
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: #dfdfdf;
    --main-rgb: 58, 58, 58;
    --disabled-color: #868686;
    --background-color: rgb(22, 22, 22);
    --selected-color: rgba(136, 136, 136, 0.6);
    --seperator-line: 1px solid rgba(225, 225, 225, 0.1);
  }
}

@media (prefers-reduced-motion) {
  :root {
    --animate-150: 0ms;
    --animate-200: 0ms;
    --animate-300: 0ms;
    --animate-500: 0ms;
  }
}

body {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: var(--background-color);
  font-family: var(--font-family);
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  user-select: none;
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 0;
  margin: 0;
  flex-direction: column;
  color: var(--text-color);
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.wrapper {
  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.card {
  min-width: 360px;
  max-width: 600px;
  color: inherit;
  padding: 1.5em;
  background: var(--main-color);
  position: relative;
  border-radius: 1.25em;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  text-align: center;
  margin-bottom: 6.25em;
  margin: 2.29em 1.29em 0.25em;
  font-size: 1em;
}

a {
  color: inherit;
}

.button {
  appearance: none;
  display: inline-flex;
  min-width: 5.14em;
  margin: 0.29em 0.29em;
  color: var(--contrast-color, #ffffff);
  background-color: var(--pop-color, #333333);
  text-align: center;
  text-transform: uppercase;
  outline-width: 0;
  border-radius: 5px;
  padding: 0.7em 0.57em;
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  -webkit-user-select: none;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  pointer-events: all;
  justify-content: center;
  align-items: center;
  transition: background-color var(--animate-150, 150ms) linear;
  transform: translate3d(0, 0, 0);
  flex-direction: row;
  border: none;
  overflow: visible;
}

.button:after {
  display: inline-block;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  opacity: 0;
  transition: opacity var(--animate-150, 150ms) cubic-bezier(.33, .17, .85, 1.1);
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .4);
  content: ' ';
  position: absolute;
  top: 0;
  left: 0;
}

.button:hover:after {
  opacity: 1;
}

.button:hover:active:after {
  opacity: 0;
}

.button[disabled] {
  background: rgba(84, 84, 84, 0.4);
  color: #ffffff;
  box-shadow: none;
  cursor: none;
  pointer-events: none;
}

.button[disabled]:active,
.button[disabled]:hover,
.button[disabled]:active:hover {
  box-shadow: none;
}

.button[noshadow],
.button[noshadow]:hover,
.button[noshadow]:hover:after,
.button[noshadow]:after {
  box-shadow: none;
}

.button[noshadow]:active {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}

.button>* {
  pointer-events: none;
}

.button :first-child {
  margin-right: 1em;
}

.button :nth-child(2) {
  display: flex;
  align-items: center;
  margin-right: 1em;
}

h1 {
  text-transform: uppercase;
  font-size: 1.5em;
}

p {
  margin: 0.5em auto;
  min-width: 300px;
}

svg {
  width: 1.5em;
  min-width: 1.5em;
  height: 1.5em;
}

.backdrop {
  background: rgba(0, 0, 0, 0.2);
  position: absolute;
  inset: 0;
  z-index: 1;
  opacity: 0;
  transition: opacity 100ms linear;
}

.backdrop[visable] {
  opacity: 1;
}

ul {
  list-style-type: none;
}

.context-menu {
  margin: 0;
  padding: 0;
  background-color: var(--main-color);
  color: var(--text-color);
  border-radius: 5px;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
  position: fixed;
  transform: scale3d(0, 0, 0);
  transition: transform 100ms cubic-bezier(.33, .17, .85, 1.1);
  min-width: 175px;
  z-index: 2;
}

.context-menu[open] {
  transform: scale3d(1, 1, 1);
}

.context-menu[open]:after {
  display: inline-block;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: opacity var(--animate-150, 150ms) cubic-bezier(.33, .17, .85, 1.1);
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .4);
  content: ' ';
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
}
/* ... */

